fix: Use the correct import of rtf model and some small refactoring